<resources>
    <string name="app_name">MarshMallow Permissions Demo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="storage">Storage</string>
    <string name="sms">SMS</string>
    <string name="contacts">Contacts</string>
    <string name="location">Location</string>
    <string name="title">Click below buttons to allow permissions…</string>
</resources>
